Fix refreshAll to call rebuildGradeSheetFromData

--- a/dashboard.html
+++ b/dashboard.html
@@ -1901,7 +1901,7 @@
       ]);
       populateGradeSubjects();
       computeGradeTotal();
-      buildGradeSheet();
+      rebuildGradeSheetFromData();
     }
 
     function resetSubjectForm() {
